# bpmi166

./: .gitattributes  .gitignore  README.md  lesson.cabal  notes.md  stack.yaml
.git-crypt/keys/default/0/: 3336046061F78327F04BE0DE51C52E906DDA082A.gpg  48F3A956CF44DF75824F98B05F6C0222CDC1D406.gpg
HW1/: HW1.hs
HW2/: HW2.hs
hello/: hello.cabal
hello/src/Hello/: Lib.hs  Prim.hs
hello/test/: Test.hs
s2/: s2.cabal
s2/src/S2/: Basic.hs  Church.hs
s2/test/: Test.hs
s3/: s3.cabal
s3/src/S3/: Basic.hs
s3/test/: Test.hs
src/: Basic.hs
test/: Test.hs
