cabal-version:           2.0
name:                    lesson
version:                 0.1
build-type:              Simple

library
  exposed-modules:       Basic
  hs-source-dirs:        src
  build-depends:         base >= 4.7 && <5
  default-language:      Haskell2010

test-suite tests
  type:                  exitcode-stdio-1.0
  main-is:               Test.hs
  hs-source-dirs:        test
  build-depends:         base >=4.7 && <5
                       , lesson
                       , hspec >= 2.7
                       , QuickCheck >= 2
  default-language:      Haskell2010
