cabal-version:           2.0
name:                    s3
version:                 0.1
build-type:              Simple

library
  exposed-modules:       S3.Basic
  hs-source-dirs:        src
  build-depends:         base >= 4.7 && <5
  default-language:      Haskell2010

test-suite tests
  type:                  exitcode-stdio-1.0
  main-is:               Test.hs
  hs-source-dirs:        test
  build-depends:         base >=4.7 && <5
                       , s3
                       , hspec >= 2.7
                       , QuickCheck >= 2
  default-language:      Haskell2010
